Wed Dec 10 02:48:46 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/net/http/test_https.rb
	  (TestNetHTTPS#test_certificate_verify_failure): on Windows,
	  Errno::ECONNRESET will be raised when the verify is failure at the
	  client side, and it'll be eaten by WEBrick.

	* test/open-uri/test_ssl.rb (TestOpenURISSL#test_validation_failure):
	  ditto.

Wed Dec 10 00:42:13 2014  Eric Wong  <e@80x24.org>

	* iseq.c (rb_method_for_self_aref, rb_method_for_self_aset):
	  new methods to generate bytecode for struct.c
	  [Feature #10575]
	* struct.c (rb_struct_ref, rb_struct_set): remove
	  (define_aref_method, define_aset_method): new functions
	  (setup_struct): use new functions
	* test/ruby/test_struct.rb: add test for struct >10 members
	* benchmark/bm_vm2_struct_big_aref_hi.rb: new benchmark
	* benchmark/bm_vm2_struct_big_aref_lo.rb: ditto
	* benchmark/bm_vm2_struct_big_aset.rb: ditto
	* benchmark/bm_vm2_struct_small_aref.rb: ditto
	* benchmark/bm_vm2_struct_small_aset.rb: ditto

Tue Dec  9 20:24:41 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* string.c: [DOC] Add missing documentation around String#chomp.
	  Patchby @stderr [ci skip][fix GH-780]

Tue Dec  9 18:20:02 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c: [DOC] Revise documentation by Marcus Stollsteimer at
	  [ruby-core:66368].  [Bug #10526]

	  * #inspect: be more specific about generated string, remove
	    obsolete example.
	  * #nil?: use code examples instead of different call-seq's.
	  * #tap: clarify what is yielded.
	  * Integer(): be more specific about to_int and to_i, remove
	    reference to Ruby 1.8.
	  * Array(): fix error.
	  * Class: fix variable name style and indentation in example.
	  * improve consistency, fix typos and formatting.

Tue Dec  9 12:48:32 2014  Josef Simanek  <josef.simanek@gmail.com>

	* vm_eval.c (rb_eval_string_wrap): [DOC] Fix `rb_eval_string_wrap`
	  documentation.  It is referencing `require` instead of `load`.