@@ -1,3 +1,9 @@
+Wed Dec 10 09:38:40 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* thread.c (exec_recursive): use the same last method name as
+	  recursive_push in the error message when recursive_pop failed.
+	  [ruby-core:66742] [Bug #10579]
+
 Wed Dec 10 02:48:46 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* test/net/http/test_https.rb
